[project]
name = "q-skill-supplier"
version = "0.1.0"
description = "Q-Forge Supplier Quality Monitoring MCP Skill Package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
q-skill-supplier = "q_skill_supplier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/q_skill_supplier"]
